# dino-rl

./: .gitignore  README.md  STUDY_PLAN.md  chrome_dino_run.py  play_browser.py  program.md  pyproject.toml  requirements.txt  results.tsv
algorithms/: a2c.py  actor_critic.py  actor_critic_nstep.py  common.py  dqn_progression.py  ppo.py  reinforce.py  reinforce_baseline.py  td_lambda.py  train_all.py  value_network.py
algorithms/results/: a2c.json  actor_critic.json  actor_critic_nstep.json  dqn_DuelingDoubleDQN_PER.json  dqn_VanillaDQN.json  ppo.json  reinforce_baseline.json  value_network_td0.json
checkpoints/: dino_ppo_best.pth  dino_ppo_last.pth  dino_runner.pth
dino_rl/: __init__.py  browser_env.py  common.py  env.py  eval_policy.py  feature_contract.py  heuristic_agent.py  networks.py  play_browser.py  policy_loader.py  policy_paths.py  train_dqn.py
dino_rl/algorithms/: a2c.py  actor_critic.py  actor_critic_nstep.py  dqn_progression.py  ppo.py  reinforce.py  reinforce_baseline.py  td_lambda.py  train_all.py  value_network.py
gym-environments/: setup.py
gym-environments/gym_dinorun/envs/: dinorun_env.py
models/: dino_runner.pth
results/: actor_critic.json  dqn_DoubleDQN.json  dqn_DuelingDoubleDQN.json  ppo.json  ppo_browser_image.json  reinforce.json  td_lambda.json
